--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -8,8 +8,8 @@
     <!-- Page plugins -->
     <link rel="stylesheet" href="/static/assets/vendor/fullcalendar/dist/fullcalendar.min.css">
     <link rel="stylesheet" href="/static/assets/vendor/sweetalert2/dist/sweetalert2.min.css">
-
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+ <script src="/static/assets/ajax/dashboard.js"></script>
     <style>
         .smallandcenter{
             text-align: center;
@@ -158,8 +158,8 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div class="table-responsive pb-6">
-                        <table class="table table-flush" id="result_list_et">
+                        <div class="table-responsive">
+                        <table class="table table-sm" id="result_list_et" style="width: 100%">
                             <thead class="thead-light">
                                 <tr>
                                     <th>EVENTO</th>
@@ -168,17 +168,16 @@
                                     <th>ELIMINATORIAS</th>
                                     <th>FINAL</th>
                                     <th>DISTANCIA</th>
-
                                 </tr>
                             </thead>
 
-                            <tbody>
+                            <tbody class="table-sm">
 
                             </tbody>
                         </table>
                         </div>
                         <!-- Chart -->
-                        <div class="chart">
+                        <div class="chart d-none">
                             <!-- Chart wrapper -->
                             <canvas id="chart-sales-dark" class="chart-canvas"></canvas>
                         </div>
@@ -196,8 +195,8 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div class="table-responsive pb-4">
-                            <table class="table table-flush" id="result_list_ce">
+                        <div class="table-responsive table-responsive-sm pb-4">
+                            <table class="table table-sm table-responsive-sm" id="result_list_ce">
                                 <thead class="thead-light">
                                 <tr>
                                     <th>CUADRA</th>
@@ -212,7 +211,7 @@
                             </table>
                         </div>
                         <!-- Chart -->
-                        <div class="chart">
+                        <div class="chart d-none">
                             <canvas id="chart-bars" class="chart-canvas"></canvas>
                         </div>
                     </div>
@@ -234,7 +233,7 @@
                     </div>
                     <div class="table-responsive">
                         <!-- Projects table -->
-                        <table class="table align-items-center table-flush">
+                        <table class="table table-sm">
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col">Caballo</th>
@@ -332,7 +331,7 @@
                         </div>
                     </div>
                     <div class="card widget-calendar">
-                        <table class="table table-hover table-striped w-100" id="result_list_rr">
+                        <table class="table table-sm w-100" id="result_list_rr">
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col">Evento</th>
@@ -367,8 +366,8 @@
                         </div>
                     </div>
                     <div class="card-body">
-                         <div class="table-responsive pb-8">
-                            <table class="table table-hover table-striped w-100" id="result_list_en">
+                         <div class="table-responsive">
+                            <table class="table table-sm w-100" id="result_list_en">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Evento</th>
@@ -383,7 +382,7 @@
                                 </tbody>
                             </table>
                          </div>
-                        <div class="chart">
+                        <div class="chart d-none">
                           <!-- Chart wrapper -->
                           <canvas id="chart-doughnut" class="chart-canvas"></canvas>
                         </div>
@@ -401,7 +400,7 @@
                         </div>
                     </div>
                     <div class="card-body">
- <div class="chart">
+ <div class="chart d-none">
               <!-- Chart wrapper -->
               <canvas id="chart-bar-stacked" class="chart-canvas"></canvas>
             </div>
@@ -409,7 +408,6 @@
                 </div>
             </div>
         </div>
-
         {% include "includes/footer.html" %}
 
     </div>
@@ -427,5 +425,10 @@
     <script src="/static/assets/vendor/fullcalendar/dist/fullcalendar.min.js"></script>
     <script src="/static/assets/vendor/sweetalert2/dist/sweetalert2.min.js"></script>
 
-   <script src="/static/assets/ajax/dashboard.js"></script>
 {% endblock javascripts %}
+<script>
+ $(document).ready(function () {
+
+    });
+
+</script>
