--- a/apps/amcm/templates/amcm/evento_cuotas.html
+++ b/apps/amcm/templates/amcm/evento_cuotas.html
@@ -124,8 +124,8 @@
                            <table width="70%" align="center">
                                <tr>
                                    <td>
-
-                                        <h4>A CONTINUACIÓN LOS EJEMPLARES QUE PAGARON LA PRIMERA CUOTA:</h4>
+                                        {{ reporte_cuotas }}
+                                        <h4>A CONTINUACIÓN LOS EJEMPLARES QUE PAGARON LA {{ titulo.tipoCuota.descripcion }}:</h4>
 
                                        <div class="row">
 
