reporte evento cuotas separado por columnas

--- a/apps/amcm/templates/amcm/evento_cuotas.html
+++ b/apps/amcm/templates/amcm/evento_cuotas.html
@@ -152,7 +152,7 @@
                                                {% regroup ejemplares_cuota by cuadra as cuadras_list %}
 
                                                     {% for cuadra in cuadras_list %}
-                                                        <div class="col-6" style="margin-bottom: 20px;">
+                                                        <div class="col-md-6" style="margin-bottom: 20px;">
                                                             <table>
                                                                <tr>
                                                                    <td width="10%">&nbsp;</td>
