--- a/apps/amcm/templates/amcm/listado_elegibles.html
+++ b/apps/amcm/templates/amcm/listado_elegibles.html
@@ -19,7 +19,9 @@
                             </ol>
                         </nav>
                     </div>
-
+                    <div class="col-lg-6 col-5 text-right">
+                        <a href="/amcm/get_listado_elegibles_pdf/?evento_id={{ evento.id }}" class="btn btn-sm btn-neutral"><i class="far fa-file-alt"></i> Descargar</a>
+                    </div>
                 </div>
             </div>
         </div>
